syntax = "proto3";

package auth;

service AuthService {
  rpc SignUp(SignUpRequest) returns (AuthResponse) {}
  rpc SignIn(SignInRequest) returns (AuthResponse) {}
}

message SignUpRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message SignInRequest {
  string email = 1;
  string password = 2;
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
}

message AuthResponse {
  User user = 1;
  string token = 2;
}